2000-02-18  Adam Fedor  <fedor@gnu.org>

	* GNustep.sh.in: Use pushd/popd to changes dirs.

2000-01-26  Adam Fedor  <fedor@gnu.org>

	* rules.make: Revert previous change of parens around tmp.

2000-02-18  Adam Fedor  <fedor@gnu.org>

	* Version: 0.6.5 Released.

2000-02-16  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile.in: Standardize prefix/GNUSTEP_INSTALLATION_DIR
	settings.
	* gnustep-make.spec: Newfile

	* common.make: Add default installation dirs.
	* bundle.make: Use default installation dir.
	* ctool.make: Likewise.
	* objc.make: Likewise.
	* palette.make: Likewise.
	* tool.make: Likewise.

	* GNUstep.csh.in: Use pushd/popd to changes dirs.

2000-02-08  Adam Fedor  <fedor@gnu.org>

	* config.guess: New version
	* config.sub: Likewise.

2000-01-24  Adam Fedor  <fedor@gnu.org>

	* names.make (GNUSTEP_HOST_GUESS): New variable. Evaluate config.guess
	and config.sub separately.

2000-01-22 Manuel Guesdon <mguesdon@sbuilders.com>

	*  gswapp.make and gswbundle.make: tar options changed 
	
2000-01-22 Manuel Guesdon <mguesdon@sbuilders.com>

	* GNUmakefile: add gswapp.make and gswbundle.make
	
2000-01-22 Manuel Guesdon <mguesdon@sbuilders.com>

	* rules.make and bundle.make: changes for GNUstepWeb
	* gswapp.make and gswbundle.make: added
	
2000-01-14  Adam Fedor  <fedor@gnu.org>

	* GNUstep.csh.in (GNUSTEP_LOCAL_ROOT): Use correct quotes.

Sun Jan  9 00:16:15 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Create directory
 	$(prefix)/Library/Colors to store color lists.

Fri Jan  7  6:05:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* application.make: use xxx_PRINCIPAL_CLASS to override the value
	of NSExecutable in Info.plist so we can have callses other than
	NSApplication as the app class.
	* palette.make: use PRINCIPAL_CLASS rather than PALETTE_CLASS
	* rules.make: remove PALETTE_CLASS

1999-12-09  Adam Fedor  <fedor@gnu.org>

	* rules.make: Remove paren's from around tmp to stop spurious