@@ -1,3 +1,8 @@
+2000-02-20  Matthias Klose  <doko@cs.tu-berlin.de>
+
+	* names.make: GNUSTEP_HOST: Use value of GNUSTEP_HOST_GUESS.
+	* GNUstep.csh.in: Use GNUSTEP_MAKEFILES.
+
 2000-02-18  Adam Fedor  <fedor@gnu.org>
 
 	* GNustep.sh.in: Use pushd/popd to changes dirs.
